# moveit_youbot

./: README.md
moveit_youbot/: CMakeLists.txt  package.xml
youbot_moveit_config/: .setup_assistant  package.xml
youbot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  youbot.srdf
youbot_moveit_config/launch/: demo.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  youbot_moveit_controller_manager.launch  youbot_moveit_controller_manager.launch.xml
youbot_moveit_examples/: CMakeLists.txt  package.xml
youbot_moveit_examples/pick_place/src/: pick_place_tutorial.cpp
youbot_moveit_plugins/youbot_arm_kinematics_plugin/: CMakeLists.txt  package.xml  youbot_arm_kinematics_plugins.xml
youbot_moveit_plugins/youbot_arm_kinematics_plugin/include/youbot_arm_kinematics/: arm_analytical_inverse_kinematics.h  arm_kdl_forward_kinematics.h  forward_kinematics.h  inverse_kinematics.h  inverse_kinematics_solver.h  solver_info_processor.h  youbot_arm_kinematics_plugin.h
youbot_moveit_plugins/youbot_arm_kinematics_plugin/src/: arm_analytical_inverse_kinematics.cpp  arm_kdl_forward_kinematics.cpp  arm_kdl_inverse_kinematics.cpp  inverse_kinematics_solver.cpp  solver_info_processor.cpp  youbot_arm_kinematics_plugin.cpp
youbot_moveit_plugins/youbot_moveit_controller_manager/: CMakeLists.txt  README.md  package.xml  youbot_moveit_controller_manager_plugin_description.xml
youbot_moveit_plugins/youbot_moveit_controller_manager/src/: youbot_moveit_controller_manager.cpp
youbot_moveit_tests/: youbot_moveit_tests.tar.bz2
youbot_trajectory_controller/: CMakeLists.txt  README.md  package.xml
youbot_trajectory_controller/launch/: youbot_trajectory_controller.launch
youbot_trajectory_controller/src/: youbot_trajectory_controller.cpp
