<?xml version="1.0"?>
<package>
  <name>youbot_moveit_tutorials</name>
  <version>0.1.1</version>
  <description>The youbot_moveit_tutorials package</description>
  <license>BSD</license>

  <author email="arne.hitzmann@gmail.com">Arne Hitzmann</author>

  <maintainer email="arne.hitzmann@gmail.com">Arne Hitzmann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>youbot_arm_kinematics</run_depend>
  <run_depend>youbot_moveit_config</run_depend>
  <run_depend>youbot_moveit_plugins</run_depend>

</package>
